--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,7 @@
         }
 
         .title {
-            color: var(--donda-blue);
+            color: var(--donda-red);
         }
 
         /* Add any additional styling as needed */
